--- a/session2/session2.ipynb
+++ b/session2/session2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -45,22 +45,29 @@
      ]
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "clear()"
+    "We import pandas to read the excel\n",
+    "And requests for API requests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import requests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +146,7 @@
        "Name: Country (according to CN Gov):, Length: 68, dtype: object"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,11 +156,220 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "strip() clean begining and end of a string like \"space\" or \"\\n\" ..."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "iso_codes = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for index, name in df[\"Country (according to CN Gov):\"].items():\n",
+    "    name = name.split(' (')[0]\n",
+    "    if name == \"Thailiand\":\n",
+    "        name = \"Thailand\"\n",
+    "        \n",
+    "    if name == \"The United Arab Emirates\":\n",
+    "        name = \"United Arab Emirates\"\n",
+    "    \n",
+    "    if name in iso_codes:\n",
+    "        continue\n",
+    "        \n",
+    "    url = 'http://www.restcountries.eu/rest/v2/name/' + name\n",
+    "    r = requests.get(url)\n",
+    "    if r.status_code == 200:\n",
+    "        data = r.json()\n",
+    "        country_code = data[0]['alpha3Code']\n",
+    "        iso_codes[name] = country_code\n",
+    "        print(name)\n",
+    "        print(country_code)\n",
+    "    else:\n",
+    "        print('[ERROR]['+ name +'] we cannot get the data, reason is ', r.status_code, r.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Afghanistan': 'AFG',\n",
+       " 'Albania': 'ALB',\n",
+       " 'Armenia': 'ARM',\n",
+       " 'Azerbaijan': 'AZE',\n",
+       " 'Bahrain': 'BHR',\n",
+       " 'Bangladesh': 'BGD',\n",
+       " 'Belarus': 'BLR',\n",
+       " 'Bhutan': 'BTN',\n",
+       " 'Bosnia and Herzegovina': 'BIH',\n",
+       " 'Brunei': 'BRN',\n",
+       " 'Bulgaria': 'BGR',\n",
+       " 'Cambodia': 'KHM',\n",
+       " 'China': 'CHN',\n",
+       " 'Croatia': 'HRV',\n",
+       " 'Czech Republic': 'CZE',\n",
+       " 'East Timor': 'TLS',\n",
+       " 'Egypt': 'EGY',\n",
+       " 'Estonia': 'EST',\n",
+       " 'Georgia': 'GEO',\n",
+       " 'Hungary': 'HUN',\n",
+       " 'India': 'IOT',\n",
+       " 'Indonesia': 'IDN',\n",
+       " 'Iran': 'IRN',\n",
+       " 'Iraq': 'IRQ',\n",
+       " 'Israel': 'ISR',\n",
+       " 'Jordan': 'JOR',\n",
+       " 'Kazakhstan': 'KAZ',\n",
+       " 'Kuwait': 'KWT',\n",
+       " 'Kyrgyzstan': 'KGZ',\n",
+       " 'Laos': 'LAO',\n",
+       " 'Latvia': 'LVA',\n",
+       " 'Lebanon': 'LBN',\n",
+       " 'Lithuania': 'LTU',\n",
+       " 'Macedonia': 'MKD',\n",
+       " 'Malaysia': 'MYS',\n",
+       " 'Maldives': 'MDV',\n",
+       " 'Moldova': 'MDA',\n",
+       " 'Mongolia': 'MNG',\n",
+       " 'Montenegro': 'MNE',\n",
+       " 'Myanmar': 'MMR',\n",
+       " 'Nepal': 'NPL',\n",
+       " 'Oman': 'OMN',\n",
+       " 'Pakistan': 'PAK',\n",
+       " 'Philippines': 'PHL',\n",
+       " 'Poland': 'POL',\n",
+       " 'Qatar': 'QAT',\n",
+       " 'Romania': 'ROU',\n",
+       " 'Russia': 'RUS',\n",
+       " 'Saudi Arabia': 'SAU',\n",
+       " 'Serbia': 'SRB',\n",
+       " 'Singapore': 'SGP',\n",
+       " 'Slovakia': 'SVK',\n",
+       " 'Slovenia': 'SVN',\n",
+       " 'Sri Lanka': 'LKA',\n",
+       " 'Syria': 'SYR',\n",
+       " 'Tajikistan': 'TJK',\n",
+       " 'Turkey': 'TUR',\n",
+       " 'Turkmenistan': 'TKM',\n",
+       " 'Ukraine': 'UKR',\n",
+       " 'Uzbekistan': 'UZB',\n",
+       " 'Vietnam': 'VNM',\n",
+       " 'Yemen': 'YEM',\n",
+       " 'France': 'FRA',\n",
+       " 'Germany': 'DEU',\n",
+       " 'United Kingdom': 'GBR',\n",
+       " 'United States of America': 'USA',\n",
+       " 'Thailand': 'THA',\n",
+       " 'United Arab Emirates': 'ARE'}"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iso_codes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r = requests.get('http://www.restcountries.eu/rest/v2/name/Afghanistan')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "AFG\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Afghanistan',\n",
+       "  'topLevelDomain': ['.af'],\n",
+       "  'alpha2Code': 'AF',\n",
+       "  'alpha3Code': 'AFG',\n",
+       "  'callingCodes': ['93'],\n",
+       "  'capital': 'Kabul',\n",
+       "  'altSpellings': ['AF', 'Afġānistān'],\n",
+       "  'region': 'Asia',\n",
+       "  'subregion': 'Southern Asia',\n",
+       "  'population': 27657145,\n",
+       "  'latlng': [33.0, 65.0],\n",
+       "  'demonym': 'Afghan',\n",
+       "  'area': 652230.0,\n",
+       "  'gini': 27.8,\n",
+       "  'timezones': ['UTC+04:30'],\n",
+       "  'borders': ['IRN', 'PAK', 'TKM', 'UZB', 'TJK', 'CHN'],\n",
+       "  'nativeName': 'افغانستان',\n",
+       "  'numericCode': '004',\n",
+       "  'currencies': [{'code': 'AFN', 'name': 'Afghan afghani', 'symbol': '؋'}],\n",
+       "  'languages': [{'iso639_1': 'ps',\n",
+       "    'iso639_2': 'pus',\n",
+       "    'name': 'Pashto',\n",
+       "    'nativeName': 'پښتو'},\n",
+       "   {'iso639_1': 'uz',\n",
+       "    'iso639_2': 'uzb',\n",
+       "    'name': 'Uzbek',\n",
+       "    'nativeName': 'Oʻzbek'},\n",
+       "   {'iso639_1': 'tk',\n",
+       "    'iso639_2': 'tuk',\n",
+       "    'name': 'Turkmen',\n",
+       "    'nativeName': 'Türkmen'}],\n",
+       "  'translations': {'de': 'Afghanistan',\n",
+       "   'es': 'Afganistán',\n",
+       "   'fr': 'Afghanistan',\n",
+       "   'ja': 'アフガニスタン',\n",
+       "   'it': 'Afghanistan',\n",
+       "   'br': 'Afeganistão',\n",
+       "   'pt': 'Afeganistão',\n",
+       "   'nl': 'Afghanistan',\n",
+       "   'hr': 'Afganistan',\n",
+       "   'fa': 'افغانستان'},\n",
+       "  'flag': 'https://restcountries.eu/data/afg.svg',\n",
+       "  'regionalBlocs': [{'acronym': 'SAARC',\n",
+       "    'name': 'South Asian Association for Regional Cooperation',\n",
+       "    'otherAcronyms': [],\n",
+       "    'otherNames': []}],\n",
+       "  'cioc': 'AFG'}]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(r.status_code)\n",
+    "print(r.json()[0]['alpha3Code'])\n"
+   ]
   }
  ],
  "metadata": {
