saved df pickle

--- a/session2/session2.ipynb
+++ b/session2/session2.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,36 +173,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for index, name in df[\"Country (according to CN Gov):\"].items():\n",
-    "    name = name.split(' (')[0]\n",
-    "    if name == \"Thailiand\":\n",
-    "        name = \"Thailand\"\n",
-    "        \n",
-    "    if name == \"The United Arab Emirates\":\n",
-    "        name = \"United Arab Emirates\"\n",
-    "    \n",
+    "for index, name in df[\"Country (according to CN Gov):\"].items():    \n",
     "    if name in iso_codes:\n",
     "        continue\n",
     "        \n",
-    "    url = 'http://www.restcountries.eu/rest/v2/name/' + name\n",
+    "    clean_name = name.split(' (')[0]\n",
+    "    if name == \"Thailiand\":\n",
+    "        clean_name = \"Thailand\"\n",
+    "        \n",
+    "    if name == \"The United Arab Emirates\":\n",
+    "        clean_name = \"United Arab Emirates\"\n",
+    "        \n",
+    "    url = 'http://www.restcountries.eu/rest/v2/name/' + clean_name\n",
     "    r = requests.get(url)\n",
     "    if r.status_code == 200:\n",
     "        data = r.json()\n",
     "        country_code = data[0]['alpha3Code']\n",
     "        iso_codes[name] = country_code\n",
-    "        print(name)\n",
-    "        print(country_code)\n",
     "    else:\n",
     "        print('[ERROR]['+ name +'] we cannot get the data, reason is ', r.status_code, r.text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +224,9 @@
        " 'East Timor': 'TLS',\n",
        " 'Egypt': 'EGY',\n",
        " 'Estonia': 'EST',\n",
+       " 'France (Not BRI)': 'FRA',\n",
        " 'Georgia': 'GEO',\n",
+       " 'Germany (not BRI)': 'DEU',\n",
        " 'Hungary': 'HUN',\n",
        " 'India': 'IOT',\n",
        " 'Indonesia': 'IDN',\n",
@@ -264,21 +264,19 @@
        " 'Sri Lanka': 'LKA',\n",
        " 'Syria': 'SYR',\n",
        " 'Tajikistan': 'TJK',\n",
+       " 'Thailiand': 'THA',\n",
+       " 'The United Arab Emirates': 'ARE',\n",
        " 'Turkey': 'TUR',\n",
        " 'Turkmenistan': 'TKM',\n",
+       " 'United Kingdom (Not BRI)': 'GBR',\n",
+       " 'United States of America (Not BRI)': 'USA',\n",
        " 'Ukraine': 'UKR',\n",
        " 'Uzbekistan': 'UZB',\n",
        " 'Vietnam': 'VNM',\n",
-       " 'Yemen': 'YEM',\n",
-       " 'France': 'FRA',\n",
-       " 'Germany': 'DEU',\n",
-       " 'United Kingdom': 'GBR',\n",
-       " 'United States of America': 'USA',\n",
-       " 'Thailand': 'THA',\n",
-       " 'United Arab Emirates': 'ARE'}"
+       " 'Yemen': 'YEM'}"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,87 +286,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "r = requests.get('http://www.restcountries.eu/rest/v2/name/Afghanistan')"
+    "We put back the iso_code into the dataframe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "200\n",
-      "AFG\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[{'name': 'Afghanistan',\n",
-       "  'topLevelDomain': ['.af'],\n",
-       "  'alpha2Code': 'AF',\n",
-       "  'alpha3Code': 'AFG',\n",
-       "  'callingCodes': ['93'],\n",
-       "  'capital': 'Kabul',\n",
-       "  'altSpellings': ['AF', 'Afġānistān'],\n",
-       "  'region': 'Asia',\n",
-       "  'subregion': 'Southern Asia',\n",
-       "  'population': 27657145,\n",
-       "  'latlng': [33.0, 65.0],\n",
-       "  'demonym': 'Afghan',\n",
-       "  'area': 652230.0,\n",
-       "  'gini': 27.8,\n",
-       "  'timezones': ['UTC+04:30'],\n",
-       "  'borders': ['IRN', 'PAK', 'TKM', 'UZB', 'TJK', 'CHN'],\n",
-       "  'nativeName': 'افغانستان',\n",
-       "  'numericCode': '004',\n",
-       "  'currencies': [{'code': 'AFN', 'name': 'Afghan afghani', 'symbol': '؋'}],\n",
-       "  'languages': [{'iso639_1': 'ps',\n",
-       "    'iso639_2': 'pus',\n",
-       "    'name': 'Pashto',\n",
-       "    'nativeName': 'پښتو'},\n",
-       "   {'iso639_1': 'uz',\n",
-       "    'iso639_2': 'uzb',\n",
-       "    'name': 'Uzbek',\n",
-       "    'nativeName': 'Oʻzbek'},\n",
-       "   {'iso639_1': 'tk',\n",
-       "    'iso639_2': 'tuk',\n",
-       "    'name': 'Turkmen',\n",
-       "    'nativeName': 'Türkmen'}],\n",
-       "  'translations': {'de': 'Afghanistan',\n",
-       "   'es': 'Afganistán',\n",
-       "   'fr': 'Afghanistan',\n",
-       "   'ja': 'アフガニスタン',\n",
-       "   'it': 'Afghanistan',\n",
-       "   'br': 'Afeganistão',\n",
-       "   'pt': 'Afeganistão',\n",
-       "   'nl': 'Afghanistan',\n",
-       "   'hr': 'Afganistan',\n",
-       "   'fa': 'افغانستان'},\n",
-       "  'flag': 'https://restcountries.eu/data/afg.svg',\n",
-       "  'regionalBlocs': [{'acronym': 'SAARC',\n",
-       "    'name': 'South Asian Association for Regional Cooperation',\n",
-       "    'otherAcronyms': [],\n",
-       "    'otherNames': []}],\n",
-       "  'cioc': 'AFG'}]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(r.status_code)\n",
-    "print(r.json()[0]['alpha3Code'])\n"
+    "df[\"isocode\"] = df[\"Country (according to CN Gov):\"].apply(lambda x: iso_codes[x])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_pickle(\"savedDF.pickle\")"
    ]
   }
  ],
