clean Session 3 + df updated with session 3

--- a/Project1_Data_Sheet/session2.ipynb
+++ b/Project1_Data_Sheet/session2.ipynb
@@ -13,11 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import requests\n",
     "import pickle\n",
     "import time\n",
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -58,9 +59,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Indicators not loaded\n"
+     ]
+    }
+   ],
    "source": [
     "if os.path.isfile('indicatorsSession2.pickle'):\n",
     "    with open('indicatorsSession2.pickle','rb') as fp:\n",
@@ -73,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -145,7 +154,7 @@
        "Name: Country (according to CN Gov):, Length: 68, dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -284,7 +293,7 @@
        " 'Yemen': 'YEM'}"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,154 +345,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AFG\n",
-      "NA\n",
-      "ALB\n",
-      "14\n",
-      "ARM\n",
-      "107\n",
-      "AZE\n",
-      "144\n",
-      "BHR\n",
-      "8\n",
-      "BGD\n",
-      "61\n",
-      "BLR\n",
-      "434\n",
-      "BTN\n",
-      "4\n",
-      "BIH\n",
-      "87\n",
-      "BRN\n",
-      "8\n",
-      "BGR\n",
-      "202\n",
-      "KHM\n",
-      "2\n",
-      "CHN\n",
-      "1245709\n",
-      "HRV\n",
-      "148\n",
-      "CZE\n",
-      "794\n",
-      "TLS\n",
-      "NA\n",
-      "EGY\n",
-      "918\n",
-      "EST\n",
-      "37\n",
-      "FRA\n",
-      "14415\n",
-      "GEO\n",
-      "75\n",
-      "DEU\n",
-      "47785\n",
-      "HUN\n",
-      "496\n",
-      "IOT\n",
-      "NA\n",
-      "IDN\n",
-      "2271\n",
-      "IRN\n",
-      "15264\n",
-      "IRQ\n",
-      "613\n",
-      "ISR\n",
-      "1436\n",
-      "JOR\n",
-      "26\n",
-      "KAZ\n",
-      "1055\n",
-      "KWT\n",
-      "NA\n",
-      "KGZ\n",
-      "137\n",
-      "LAO\n",
-      "NA\n",
-      "LVA\n",
-      "90\n",
-      "LBN\n",
-      "110\n",
-      "LTU\n",
-      "81\n",
-      "MKD\n",
-      "42\n",
-      "MYS\n",
-      "1166\n",
-      "MDV\n",
-      "NA\n",
-      "MDA\n",
-      "73\n",
-      "MNG\n",
-      "124\n",
-      "MNE\n",
-      "10\n",
-      "MMR\n",
-      "NA\n",
-      "NPL\n",
-      "20\n",
-      "OMN\n",
-      "4\n",
-      "PAK\n",
-      "193\n",
-      "PHL\n",
-      "323\n",
-      "POL\n",
-      "3924\n",
-      "QAT\n",
-      "19\n",
-      "ROU\n",
-      "1098\n",
-      "RUS\n",
-      "22777\n",
-      "SAU\n",
-      "909\n",
-      "SRB\n",
-      "171\n",
-      "SGP\n",
-      "1609\n",
-      "SVK\n",
-      "183\n",
-      "SVN\n",
-      "470\n",
-      "LKA\n",
-      "277\n",
-      "SYR\n",
-      "120\n",
-      "TJK\n",
-      "2\n",
-      "THA\n",
-      "979\n",
-      "ARE\n",
-      "52\n",
-      "TUR\n",
-      "8175\n",
-      "TKM\n",
-      "44\n",
-      "GBR\n",
-      "13301\n",
-      "USA\n",
-      "293904\n",
-      "UKR\n",
-      "2283\n",
-      "UZB\n",
-      "357\n",
-      "VNM\n",
-      "592\n",
-      "YEM\n",
-      "15\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for nameColumn, valueIndicator in dicoColumnIndicator.items():\n",
     "    \n",
@@ -503,6 +369,7 @@
     "                indicators[nameColumn][isocode] = data[1][0]['value']\n",
     "                print(indicators[nameColumn][isocode])\n",
     "            except:\n",
+    "                indicators[nameColumn][isocode] = np.nan\n",
     "                print(\"[WARNING] \" + nameColumn + \" & \" + isocode + \" => No value found\")\n",
     "        else:\n",
     "            print('[ERROR]['+ isocode +'] we cannot get the data, reason is ', r.status_code, r.text)\n",
@@ -519,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,12 +398,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We display the DF to check that the value has been added succesfully"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Creating the new excel with the data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,108 +435,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_pickle(\"savedDF.pickle\")\n",
     "with open('indicatorsSession2.pickle','wb') as fp:\n",
-    "    pickle.dump(a,fp)"
+    "    pickle.dump(indicators,fp)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Country (according to CN Gov):', 'Date of research inquiry',\n",
-       "       'HF Index of Economic Freedom (Scale: 1-100)',\n",
-       "       'Heritage Foundation Index of Economic Freedom (Global Ranking)',\n",
-       "       'Bertelsmann Transformation index (BTI)',\n",
-       "       'Bertelsmann Transformation index (BTI) - Ranking',\n",
-       "       'IMF WB\\nCustoms and other import duties (% of tax revenue) 2016',\n",
-       "       'WB IMF Non-performing loans to total gross loans ratio (%)',\n",
-       "       'Moody's Socvereign Ratings List', 'S&P Sovereign Ratings List',\n",
-       "       'Fitch Sovereign Ratings List',\n",
-       "       'UIC Rail freight (mn ton x km travelled)',\n",
-       "       'ICAO air freight (mn ton x km travelled)',\n",
-       "       'WB Household final consumption expenditure, PPP bn USD',\n",
-       "       'WB UNESCO R&D Expenditure % of GDP',\n",
-       "       'WB UNESCO Researchers p. mn inhabitants',\n",
-       "       'TI Corruption Perception Index',\n",
-       "       'TI Corruption Perception Index - Ranking', 'BRI GDP', 'BRI GDP p.c.',\n",
-       "       'BRI GDP growth rate', 'BRI Y.o.Y. GDP growth rate p.c.',\n",
-       "       'BRI Agriculture value added per sector ',\n",
-       "       'BRI Industry value added per sector ',\n",
-       "       'BRI Services value added per sector ',\n",
-       "       'Cumulative value added (numbers should reflect 100%)',\n",
-       "       'Exp./Imp. volume USD', 'WITS Time to Import ', 'WITS Time to Export ',\n",
-       "       'IMF Financial Soundness Indicators', 'WB Central Government Debt',\n",
-       "       'BRI Internet penetration rate (%)', 'BRI Population density (/km2)',\n",
-       "       'BRI Percentage of Urban Population in Total Population',\n",
-       "       'WB Cost of Starting a Business',\n",
-       "       'WB Ease of Doing Business Index (1 = most business-friendly regulations)',\n",
-       "       'WB Logistics Performance Index (LPI) (range: 1-5) ',\n",
-       "       'IFDI Net Inflows (% of GDP)',\n",
-       "       'ED National Electric Power Consumption TwH',\n",
-       "       'WHO Current Health Expenditure p.c., PPP USD',\n",
-       "       'WB Research Expenditure % of GDP', 'WIPO Trademark applications',\n",
-       "       'WIPO Patent Applications', 'isocode'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "indicators"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
